--- a/index.html
+++ b/index.html
@@ -1,11 +1,50 @@
 <!DOCTYPE html>
 <html>
-<head> 
-    <title>Coder</title>
-    <meta charset="utf-8">    
+
+<head>
+    <title>lukes project</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-    
-   
+    <div id="painting">
+
+
+        <div id="toprow">
+            <div id="bigbox" class="red right"></div>
+            <div id="divider1" class="black right"></div>
+            <div id="topleftcolumn" class="right">
+                <div class="mediumbox yellow"></div>
+                <div id="divider2" class="black"></div>
+                <div class="mediumbox green"></div>
+            </div>
+        </div>
+
+
+
+
+        <div id="middlerow" class="black"></div>
+
+
+
+
+        <div id="bottomrow">
+
+            <div id="mediumbox2" class="blue left"></div>
+            <div id="divider3" class="black left"></div>
+            <div id="bottombig" class="yellow left"></div>
+            <div id="divider4" class="black left"></div>
+            <div id="bottomright left">
+                <div class="tinybox" class="yellow left"></div>
+                <div id="tinydivider" class="black left"></div>
+                <div class="tinybox" class="yellow left"></div>
+            </div>
+        </div>
+
+
+
+    </div>
 </body>
+
 </html>
